dotnet_macros/tests/ui/dotnet_export_unknown_key.stderr
error: #[dotnet_export]: unknown attribute key; expected naming/error/cancellation, `enums(Type, ...)`, `attr(...)`, `return_attr(...)`, or `param_attr(name, ...)`
 --> tests/ui/dotnet_export_unknown_key.rs:3:17
  |
3 | #[dotnet_export(rename = "ParsePosition")]
  |                 ^^^^^^
